账户明细功能编码

--- a/iBank/iBank/Base.lproj/Main.storyboard
+++ b/iBank/iBank/Base.lproj/Main.storyboard
@@ -272,7 +272,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="QiN-yJ-g9w">
-                                <rect key="frame" x="16" y="60" width="992" height="700"/>
+                                <rect key="frame" x="16" y="80" width="992" height="680"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="yYP-gS-Vri" id="kVe-mj-LFV"/>
@@ -282,7 +282,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="QiN-yJ-g9w" firstAttribute="top" secondItem="6rU-2e-piT" secondAttribute="bottom" constant="40" id="5S3-1Q-Pyq"/>
+                            <constraint firstItem="QiN-yJ-g9w" firstAttribute="top" secondItem="6rU-2e-piT" secondAttribute="bottom" constant="60" id="5S3-1Q-Pyq"/>
                             <constraint firstAttribute="bottom" secondItem="QiN-yJ-g9w" secondAttribute="bottom" constant="8" id="B2Y-x7-ZAC"/>
                             <constraint firstItem="QiN-yJ-g9w" firstAttribute="leading" secondItem="SzK-h0-O4h" secondAttribute="leading" constant="16" id="QoI-PG-kdt"/>
                             <constraint firstAttribute="trailing" secondItem="QiN-yJ-g9w" secondAttribute="trailing" constant="16" id="zTb-xa-RQ8"/>
@@ -309,10 +309,29 @@
                     <view key="view" contentMode="scaleToFill" id="srv-OM-1c2">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.93725496529999996" green="0.99215692280000001" blue="0.2117647231" alpha="1" colorSpace="deviceRGB"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Fsp-lm-jHH">
+                                <rect key="frame" x="16" y="80" width="992" height="680"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="C2c-yL-OgO" id="RS6-Rd-cDc"/>
+                                    <outlet property="delegate" destination="C2c-yL-OgO" id="5Vv-Ns-VCs"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Fsp-lm-jHH" firstAttribute="top" secondItem="BM3-sq-v3F" secondAttribute="bottom" constant="60" id="A80-Fr-mP0"/>
+                            <constraint firstItem="Fsp-lm-jHH" firstAttribute="leading" secondItem="srv-OM-1c2" secondAttribute="leading" constant="16" id="Egl-pT-vvg"/>
+                            <constraint firstAttribute="trailing" secondItem="Fsp-lm-jHH" secondAttribute="trailing" constant="16" id="ePD-ns-lGf"/>
+                            <constraint firstItem="KqD-qx-FpN" firstAttribute="top" secondItem="Fsp-lm-jHH" secondAttribute="bottom" constant="8" id="weA-e3-kqN"/>
+                        </constraints>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="1024" height="768"/>
+                    <connections>
+                        <outlet property="tableView" destination="Fsp-lm-jHH" id="8pg-TH-0SM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wvI-WO-tCQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -502,6 +521,23 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sjk-DS-bfR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="486" y="248"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Kkn-4a-dlb">
+            <objects>
+                <viewController id="9al-cv-1Eh" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="o5c-i2-YVX"/>
+                        <viewControllerLayoutGuide type="bottom" id="tzn-dz-9yu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kjc-op-hq4">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DwK-Yx-njG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
     <resources>
