--- a/iBank/iBank/view/cells.xib
+++ b/iBank/iBank/view/cells.xib
@@ -185,6 +185,7 @@
                 <outlet property="saveAccountButton" destination="jqn-2M-wRb" id="zcV-dC-Ooj"/>
                 <outlet property="saveButton" destination="ewN-yg-ZYa" id="Mcg-fI-HEZ"/>
                 <outlet property="slider" destination="EKj-VD-ItT" id="j1h-GE-UOZ"/>
+                <outlet property="timeoutIntervalLabel" destination="A83-sK-MPi" id="aKe-Mi-gIy"/>
             </connections>
             <point key="canvasLocation" x="167" y="557.5"/>
         </tableViewCell>
@@ -663,7 +664,7 @@
                         <color key="textColor" red="0.43921568630000002" green="0.43921568630000002" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yrk-Ng-9LS" userLabel="v1">
+                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yrk-Ng-9LS" userLabel="v1">
                         <rect key="frame" x="0.0" y="0.0" width="1" height="161"/>
                         <color key="backgroundColor" red="0.90196078430000004" green="0.90196078430000004" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -677,21 +678,21 @@
                             <constraint firstAttribute="width" constant="1" id="hKF-v1-96k"/>
                         </constraints>
                     </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Ai-xL-pp5" userLabel="v3">
+                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3Ai-xL-pp5" userLabel="v3">
                         <rect key="frame" x="991" y="0.0" width="1" height="161"/>
                         <color key="backgroundColor" red="0.90196078430000004" green="0.90196078430000004" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="1" id="5Yg-EG-Vur"/>
                         </constraints>
                     </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AHW-nc-fik" userLabel="h">
+                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AHW-nc-fik" userLabel="h">
                         <rect key="frame" x="0.0" y="160" width="992" height="1"/>
                         <color key="backgroundColor" red="0.90196078430000004" green="0.90196078430000004" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="Mmq-m2-eWq"/>
                         </constraints>
                     </view>
-                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="fmY-DB-Kvf">
+                    <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="fmY-DB-Kvf">
                         <rect key="frame" x="130" y="0.0" width="861" height="160"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <connections>
