--- a/iBank/iBank/view/views.xib
+++ b/iBank/iBank/view/views.xib
@@ -68,7 +68,8 @@
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IKN-5v-3si" userLabel="refresh">
                     <rect key="frame" x="330" y="139" width="30" height="30"/>
-                    <state key="normal" backgroundImage="刷新认证码-标准状态.png">
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <state key="normal" image="刷新认证码-标准状态.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
