--- a/iBank/iBank/view/cells.xib
+++ b/iBank/iBank/view/cells.xib
@@ -55,7 +55,6 @@
             <string>MicrosoftYaHei</string>
             <string>MicrosoftYaHei</string>
             <string>MicrosoftYaHei</string>
-            <string>MicrosoftYaHei</string>
         </mutableArray>
     </customFonts>
     <objects>
@@ -102,7 +101,7 @@
                         <color key="backgroundColor" red="0.87058823529411766" green="0.87058823529411766" blue="0.87058823529411766" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YhW-5t-qEk">
-                        <rect key="frame" x="135" y="207" width="301" height="52"/>
+                        <rect key="frame" x="135" y="207" width="258" height="52"/>
                         <state key="normal" title="连接测试" backgroundImage="按钮-标准状态.png">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
@@ -149,14 +148,8 @@
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="系统超时自动注销" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A83-sK-MPi">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="30分钟内无操作自动注销" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A83-sK-MPi">
                         <rect key="frame" x="160" y="130" width="200" height="21"/>
-                        <fontDescription key="fontDescription" name="MicrosoftYaHei" family="Microsoft YaHei" pointSize="17"/>
-                        <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="自动注销时限（分钟）" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lOy-Qb-Gbh">
-                        <rect key="frame" x="160" y="171" width="200" height="21"/>
                         <fontDescription key="fontDescription" name="MicrosoftYaHei" family="Microsoft YaHei" pointSize="17"/>
                         <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -168,19 +161,30 @@
                         </state>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ewN-yg-ZYa">
-                        <rect key="frame" x="135" y="231" width="301" height="52"/>
-                        <state key="normal" title="退出" backgroundImage="按钮-选中状态.png">
+                        <rect key="frame" x="135" y="231" width="258" height="52"/>
+                        <state key="normal" title="保存" backgroundImage="按钮-选中状态.png">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H1F-0p-Bvg">
+                        <rect key="frame" x="500" y="231" width="258" height="52"/>
+                        <state key="normal" title="退出" backgroundImage="logout.png">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
+                    <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="30" minValue="0.0" maxValue="30" translatesAutoresizingMaskIntoConstraints="NO" id="EKj-VD-ItT">
+                        <rect key="frame" x="158" y="166" width="416" height="31"/>
+                    </slider>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
                 <outlet property="autoLogoutButton" destination="qmA-Fh-Cir" id="5Nm-fm-27v"/>
-                <outlet property="logoutButton" destination="ewN-yg-ZYa" id="pju-ZV-gNp"/>
+                <outlet property="logoutButton" destination="H1F-0p-Bvg" id="q9m-7o-LtC"/>
                 <outlet property="saveAccountButton" destination="jqn-2M-wRb" id="zcV-dC-Ooj"/>
+                <outlet property="saveButton" destination="ewN-yg-ZYa" id="Mcg-fI-HEZ"/>
+                <outlet property="slider" destination="EKj-VD-ItT" id="j1h-GE-UOZ"/>
             </connections>
             <point key="canvasLocation" x="167" y="557.5"/>
         </tableViewCell>
@@ -726,6 +730,7 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="logout.png" width="301" height="52"/>
         <image name="按钮-标准状态.png" width="301" height="52"/>
         <image name="按钮-选中状态.png" width="301" height="52"/>
         <image name="灰色-没选中.png" width="34" height="34"/>
